<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToGetHer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reset">复位</string>
    <string name="start">开始</string>
	<string name="password">密码</string>
    <string name="account">账户</string>
    <string name="tips_account">账户：</string>
    <string name="tips_password">密码：</string>
    <string name="forget_tips"><u>忘记密码</u></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="use_other_login">使用其他方式登录</string>
    <string name="visitor_entance"><u>游客浏览入口</u></string>
    <string name="service_agreement"><u>《服务协议》</u></string>
</resources>
