<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EE7621" >

<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     >

    <RelativeLayout
        android:id="@+id/denglu_icon"
        android:layout_width="fill_parent"
        android:layout_height="200dp" >

        <com.running.together.view.CricleImageView
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/denglu1_01" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/denglu_icon"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/login_user" />

            <com.running.together.view.MyEditText
                android:singleLine="true"
                android:id="@+id/input_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:background="@drawable/edittext_bg_selector"
                android:drawableLeft="@drawable/edit_indicator"
                android:drawableRight="@drawable/drawable_right_icon_selector"
                android:hint="@string/account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/login_psw" />

            <com.running.together.view.MyEditText
                android:singleLine="true"
                android:id="@+id/input_user_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:background="@drawable/edittext_bg_selector"
                android:drawableLeft="@drawable/edit_indicator"
                android:drawableRight="@drawable/drawable_right_icon_selector"
                android:hint="@string/password"
                android:password="true" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/forget_tips"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/register_btn_selector"
            android:text="@string/register"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn_selector"
            android:text="@string/login"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_tips_user_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/use_other_login"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/other_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tips_user_other"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/login_qq_selector" />

        <ImageView
            android:id="@+id/iv_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_sina_selector" />

        <!-- <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_wechat_icon_normal" /> -->
    </LinearLayout>
    <RelativeLayout 
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/other_login"
        >
        <TextView 
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/visitor_login"
            android:layout_centerInParent="true"
            android:text="@string/visitor_entance"
            
           />
    </RelativeLayout>

</RelativeLayout>
</ScrollView>